# tc-ebpf-udp-proxy

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.receiver  Dockerfile.runtime  README.md  RELEASE_CHECKLIST.md  config.example.yaml  deploy.sh  udp-fanout-guide.md
.cargo/: config.toml
docs/: DEPLOYMENT.md  METALLB_DEPLOYMENT.md
k8s/: configmap-metallb.yaml  configmap.yaml  daemonset-metallb.yaml  daemonset.yaml  example-receivers.yaml  rbac.yaml  service-metallb.yaml  test-deployment.yaml
udp-fanout/: Cargo.toml
udp-fanout-common/: Cargo.toml
udp-fanout-common/src/: lib.rs
udp-fanout-ebpf/: Cargo.toml
udp-fanout-ebpf/src/: fanout.rs  main.rs
udp-fanout/src/: af_xdp.rs  config.rs  ebpf_manager.rs  health.rs  kubernetes.rs  main.rs  metrics.rs  userspace.rs
xtask/: Cargo.toml
xtask/src/: main.rs
